# sigmf-recorder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  json_concat.cpp  manifest.cpp  recorder.cpp  slice.py
manifests/: ism-scan.manifest  ism-wifi-ch6.manifest  ism-wifichannels-2and9.manifest  ism.manifest  low-bands.manifest  low-midbands.manifest  mid-range-bands.manifest  midband-short.manifest  test.manifest  tv-bands.manifest  upper-cellular-1900-2400.manifest  upper-cellular-2050-225.manifest  upper-cellular.manifest  upper-cellular2.manifest
